--- a/cv/index.html
+++ b/cv/index.html
@@ -17,9 +17,9 @@
     <meta name="author" content="{{ site.data.cv.name }}"/>
     <meta name="description" content="{{ site.data.cv.name }}'s CV"/>
     <link rel="shortcut icon" href="/favicon.png">
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet" media="all"/>
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,700">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet" media="all"/>
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=PT+Sans:400,700">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Oswald:400,300,700">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <style>
         .cv-container {
