--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@ layout: default
 ---
 
 <div class="home" id="home">
-  <h1 class="pageTitle">Recent Posts</h1>
+  <h1 class="pageTitle">
+        {% if page.language == 'ko' %}
+        최근 포스팅
+        {% else %}
+        Recent Posts
+        {% endif %}
+  </h1>
   <ul class="posts noList">
     {% for post in paginator.posts %}
       <li>
@@ -16,10 +22,23 @@ layout: default
   <!-- Pagination links -->
   <div class="pagination">
     {% if paginator.previous_page %}
-      <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}" class="previous button__outline">Newer Posts</a> 
+      <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}" class="previous button__outline">
+        {% if page.language == 'ko' %}
+        다음 포스트
+        {% else %}
+        Newer Posts
+        {% endif %}
+      </a> 
     {% endif %}
     {% if paginator.next_page %}
-      <a href="{{ paginator.next_page_path | prepend: site.baseurl }}" class="next button__outline">Older Posts</a>
+      <a href="{{ paginator.next_page_path | prepend: site.baseurl }}" class="next button__outline">
+                {% if page.language == 'ko' %}
+        이전 포스트
+        {% else %}
+        Older Posts
+        {% endif %}
+
+      </a>
     {% endif %}
   </div>
 </div>
