Contact - FormSpree now requires post

--- a/contact/index.en.html
+++ b/contact/index.en.html
@@ -18,7 +18,7 @@ title: Contact
     	Also, you can use this form to contact me.
     </p>
   </div>
-  <form action="http://formspree.io/choo@sungwoo.me">
+  <form action="http://formspree.io/choo@sungwoo.me" method="post">
     <label for="name">Name</label>    
     <input type="text" id="name" name="name" class="full-width"><br>
     <label for="email">E-mail</label>
