--- a/contact/index.html
+++ b/contact/index.html
@@ -17,7 +17,7 @@ title: 연락하기
       이메일 보내는 것이 귀찮으시다면, 오른쪽 폼에 남겨주시면 제가 내용을 메일로 받을 수 있습니다.
     </p>
   </div>
-  <form action="http://formspree.io/choo@sungwoo.me">
+  <form action="http://formspree.io/choo@sungwoo.me" method="post">
     <label for="name">이름</label>    
     <input type="text" id="name" name="name" class="full-width"><br>
     <label for="email">이메일</label>
